NetworkQualityEstimator: Update signal strength estimate periodically

Currently, the signal strength is updated when a main frame request
is received. That approach does not work for net embedders that do
not have a main frame concept (e.g., via cronet). This CL changes NQE
to update the signal strength periodically without relying on the main frame requests.

BUG=681929
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_cronet_tester

Review-Url: https://codereview.chromium.org/2650573002
Cr-Commit-Position: refs/heads/master@{#446329}